Add URL to mediawiki extension homepage

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://www.mediawiki.org/wiki/Extension:GLTFHandler",
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "46.0.0",
 		"mediawiki/mediawiki-phan-config": "0.15.1",
