--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "muqsit/gltfhandler",
 	"type": "mediawiki-extension",
-	"description": "Embed 3D GLTF models (.glb and .glft files) on MediaWiki",
+	"description": "Embed 3D GLTF models (.glb and .gltf files) on MediaWiki",
 	"keywords": ["gltf", "glb", "MediaWiki", "extension"],
 	"homepage": "https://www.mediawiki.org/wiki/Extension:GLTFHandler",
 	"license": "GPL-2.0-or-later",
